--- a/index.html
+++ b/index.html
@@ -4,6 +4,18 @@
     <meta charset="utf-8">
     <title>Kim JiHye's Portfolio</title>
     <link rel="stylesheet" href="master.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Noto+Sans+KR:wght@100;300;400;500;700;900&display=swap" rel="stylesheet">
+
+    <meta property="og:url" content="https://202009023kimjihye.github.io/Kimjihye-s-Portfolio/">
+    <meta property="og:title" content="Kim JiHye's Portfolio">
+    <meta property="og:type" content="website">
+    <meta property="og:image" content="og_img.png">
+    <meta property="og:description" content="Kim JiHye's Portfolio">
+
+    <link rel="shortcut icon" href="img/favicon.ico" type="image/x-icon">
+    <link rel="icon" href="img/favicon.ico" type="image/x-icon">
   </head>
 
 
@@ -27,7 +39,7 @@
 
     <section>
 
-      <div class="index_visual">
+      <div class="index_visual" class="slide-bck-top">
         <div class="index_visual_text">
         </div>
       </div>
