--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
     <meta property="og:url" content="https://202009023kimjihye.github.io/Kimjihye-s-Portfolio/">
     <meta property="og:title" content="Kim JiHye's Portfolio">
-    <meta property="og:type" content="website">
+    <meta property="og:type" content="Kim JiHye's Portfolio">
     <meta property="og:image" content="img/og_img.png">
     <meta property="og:description" content="Kim JiHye's Portfolio">
 
