--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
     <meta property="og:url" content="https://202009023kimjihye.github.io/Kimjihye-s-Portfolio/">
     <meta property="og:title" content="Kim JiHye's Portfolio">
-    <meta property="og:type" content="Kim JiHye's Portfolio">
+    <meta property="og:type" content="끊임없이 열심히 노력하는 양자리 디자이너 김지혜입니다.">
     <meta property="og:image" content="img/og_img.png">
     <meta property="og:description" content="Kim JiHye's Portfolio">
 
